# brass

./: CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  README_PYPI.md  pyproject.toml
analyses/: bulk.cc  centrality.cc  midrap.cc  xsection.py
examples/: dndydpt.py  run_brass.py
include/: accessor.h  analysis.h  analysisregister.h  binaryreader.h  blocks.h  histogram.h  histogram1d.h  histogram2d.h  quantities.h
python/: bindings.cc  install.sh  pyproject.toml
python/brass/: __init__.py
python/brass/cli/: analyze_runs.py
python/brass/scan/: get_cmds.py  scan.py  template.py
pythonlib/: bindings.cc  pyproject.toml
pythonlib/brass/: __init__.py  hist1d.py  hist2d.py  histNd.py
pythonlib/brass/analyses/: __init__.py  count_unwounded.py  dndydmt.py  dndydmt_unwounded.py  run_analysis.py  xsection.py
pythonlib/brass/cli/: analyze_runs.py  merge_pickle.py  print_pickle.py  run_commands.py
pythonlib/brass/merging/: merge.py
pythonlib/brass/meta/: meta.py
pythonlib/brass/scan/: scan.py
src/: accessor.cc  analysis.cc  binaryreader.cc  blocks.cc  histogram.cc  main.cc  mergekey.cc  quantities.cc
tests/: binaryreader.cc  histogram.cc  test_Binary.py  test_binary.py  test_bulk.py  test_dndydmt.py  test_dndydmt_unwounded.py  test_histnd.py  test_merge.py  test_merge_pickle.py  test_utils.py  test_xsection.py  writing_utils.py
